# RoomController

./: CMakeLists.txt  README.md
include/: RoomController.hpp  RoomControllerInterface.hpp  Sensor.hpp  SensorInterface.hpp  SensorMock.hpp
src/: RoomController.cpp  Sensor.cpp
test/: test_example.cpp
